--- a/integrations/unstructured/pyproject.toml
+++ b/integrations/unstructured/pyproject.toml
@@ -41,7 +41,7 @@ source = "vcs"
 tag-pattern = 'integrations\/unstructured-v(?P<version>.*)'
 
 [tool.hatch.version.raw-options]
-root = "../../.."
+root = "../.."
 git_describe_command = 'git describe --tags --match="integrations/unstructured-v[0-9]*"'
 
 [tool.hatch.envs.default]
