--- a/.github/workflows/unstructured.yml
+++ b/.github/workflows/unstructured.yml
@@ -11,7 +11,7 @@ on:
       - ".github/workflows/unstructured.yml"  
 
 concurrency:
-  group: unstructured_-${{ github.head_ref }}
+  group: unstructured-${{ github.head_ref }}
   cancel-in-progress: true
 
 env:
@@ -50,10 +50,10 @@ jobs:
         run: pip install --upgrade hatch
 
       - name: Lint
-        working-directory: integrations/ollama
+        working-directory: integrations/unstructured
         if: matrix.python-version == '3.9'
         run: hatch run lint:all
 
       - name: Run tests
-        working-directory: integrations/ollama      
+        working-directory: integrations/unstructured      
         run: hatch run cov
