--- a/integrations/pinecone/pyproject.toml
+++ b/integrations/pinecone/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
 ]
 dependencies = [
   "haystack-ai",
-  "pinecone-client",
+  "pinecone-client<3",  # see https://github.com/deepset-ai/haystack-core-integrations/issues/223
 ]
 
 [project.urls]
