--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -79,6 +79,11 @@ integration:unstructured-fileconverter:
       - any-glob-to-any-file: "integrations/unstructured/fileconverter/**/*"
       - any-glob-to-any-file: ".github/workflows/unstructured_fileconverter.yml"
 
+integration:uptrain:
+  - changed-files:
+      - any-glob-to-any-file: "integrations/uptrain/**/*"
+      - any-glob-to-any-file: ".github/workflows/uptrain.yml"
+
 integration:weaviate:
   - changed-files:
       - any-glob-to-any-file: "integrations/weaviate/**/*"
