--- a/integrations/chroma/pyproject.toml
+++ b/integrations/chroma/pyproject.toml
@@ -47,6 +47,7 @@ git_describe_command = 'git describe --tags --match="integrations/chroma-v[0-9]*
 dependencies = [
   "coverage[toml]>=6.5",
   "pytest",
+  "haystack-pydoc-tools",
 ]
 [tool.hatch.envs.default.scripts]
 test = "pytest {args:tests}"
@@ -59,6 +60,7 @@ cov = [
   "test-cov",
   "cov-report",
 ]
+docs = "pydoc-markdown pydoc.yml"
 
 [[tool.hatch.envs.all.matrix]]
 python = ["3.9", "3.10"]
