--- a/integrations/chroma/pydoc/document_stores.yml
+++ b/integrations/chroma/pydoc/document_stores.yml
@@ -1,8 +1,7 @@
 loaders:
   - type: haystack_pydoc_tools.loaders.CustomPythonLoader
-    search_path: [src]
+    search_path: [../src]
     modules: [
-      "haystack_integrations.components.retrievers.chroma.retriever",
       "haystack_integrations.document_stores.chroma.document_store",
       "haystack_integrations.document_stores.chroma.errors",
       "haystack_integrations.document_stores.chroma.utils",
@@ -21,11 +20,11 @@ renderer:
   excerpt: Chroma integration for Haystack
   category_slug: haystack-classes
   title: Chroma
-  slug: integrations-chroma
+  slug: integrations-chroma-document-stores
   order: 1
   markdown:
     descriptive_class_title: false
     descriptive_module_title: true
     add_method_class_prefix: true
     add_member_class_prefix: false
-    filename: _readme_sync.md
+    filename: _readme_document_stores.md
