feat: Generate API docs (#262)
* ignore docs generation by-products

* add pydoc config file

* hatch run docs

* generate docs as smoke test

* split the steps for easier debugging

* split pydoc config

* update pydoc pattern

* single-page version

* newline

* upd parent category

---------

Co-authored-by: Daria Fokina <daria.fokina@deepset.ai>

--- a/.github/workflows/chroma.yml
+++ b/.github/workflows/chroma.yml
@@ -52,5 +52,9 @@ jobs:
       if: matrix.python-version == '3.9' && runner.os == 'Linux'
       run: hatch run lint:all
 
+    - name: Generate docs
+      if: matrix.python-version == '3.9' && runner.os == 'Linux'
+      run: hatch run docs
+
     - name: Run tests
       run: hatch run cov
