--- a/.github/workflows/CI_readme_sync.yml
+++ b/.github/workflows/CI_readme_sync.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -U haystack-pydoc-tools
+          pip install -U haystack-pydoc-tools hatch
 
       # We look into the changeset in order to understand
       # which integrations were modified by the last commit.
