--- a/.github/workflows/CI_readme_sync.yml
+++ b/.github/workflows/CI_readme_sync.yml
@@ -39,6 +39,7 @@ jobs:
           dir_names_max_depth: 2
 
       - name: Generate docs
+        if: steps.changed-files.outputs.all_changed_files != ''
         env:
           # This is necessary to fetch the documentation categories
           # from Readme.io as we need them to associate the slug
