--- a/integrations/amazon_sagemaker/pyproject.toml
+++ b/integrations/amazon_sagemaker/pyproject.toml
@@ -34,9 +34,12 @@ dependencies = [
 ]
 
 [project.urls]
-Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/amazon_sagemaker#readme"
-Issues = "https://github.com/deepset-ai/haystack-core-integrations/issues"
-Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/amazon_sagemaker"
+Documentation = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/amazon_sagemaker_haystack#readme"
+Issues = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/amazon_sagemaker_haystack/issues"
+Source = "https://github.com/deepset-ai/haystack-core-integrations/tree/main/integrations/amazon_sagemaker_haystack"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src/haystack_integrations"]
 
 [tool.hatch.version]
 source = "vcs"
@@ -64,7 +67,7 @@ cov = [
 ]
 
 [[tool.hatch.envs.all.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+python = ["3.7", "3.8", "3.9", "3.10", "3.11"]
 
 [tool.hatch.envs.lint]
 detached = true
@@ -74,7 +77,7 @@ dependencies = [
   "ruff>=0.0.243",
 ]
 [tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive {args:src/amazon_sagemaker_haystack tests}"
+typing = "mypy --install-types --non-interactive --explicit-package-bases {args:src/ tests}"
 style = [
   "ruff {args:.}",
   "black --check --diff {args:.}",
@@ -106,6 +109,7 @@ select = [
   "E",
   "EM",
   "F",
+  "FBT",
   "I",
   "ICN",
   "ISC",
@@ -126,12 +130,12 @@ select = [
 ignore = [
   # Allow non-abstract empty methods in abstract base classes
   "B027",
+  # Allow boolean positional values in function calls, like `dict.get(... True)`
+  "FBT003",
   # Ignore checks for possible passwords
   "S105", "S106", "S107",
   # Ignore complexity
   "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
-  # Ignore unused params
-  "ARG001", "ARG002", "ARG005"
 ]
 unfixable = [
   # Don't touch unused imports
@@ -139,26 +143,22 @@ unfixable = [
 ]
 
 [tool.ruff.isort]
-known-first-party = ["amazon_sagemaker_haystack"]
+known-first-party = ["haystack_integrations"]
 
 [tool.ruff.flake8-tidy-imports]
-ban-relative-imports = "all"
+ban-relative-imports = "parents"
 
 [tool.ruff.per-file-ignores]
 # Tests can use magic values, assertions, and relative imports
 "tests/**/*" = ["PLR2004", "S101", "TID252"]
 
 [tool.coverage.run]
-source_pkgs = ["amazon_sagemaker_haystack", "tests"]
 branch = true
 parallel = true
-omit = [
-  "src/amazon_sagemaker_haystack/__about__.py",
-]
 
 [tool.coverage.paths]
-amazon_sagemaker_haystack = ["src/amazon_sagemaker_haystack", "*/amazon_sagemaker_haystack/src/amazon_sagemaker_haystack"]
-tests = ["tests", "*/amazon_sagemaker_haystack/tests"]
+amazon_sagemaker_haystack = ["src"]
+tests = ["tests"]
 
 [tool.coverage.report]
 exclude_lines = [
@@ -166,24 +166,11 @@ exclude_lines = [
   "if __name__ == .__main__.:",
   "if TYPE_CHECKING:",
 ]
-
 [[tool.mypy.overrides]]
 module = [
-  "botocore.*",
-  "transformers.*",
-  "boto3.*",
   "haystack.*",
+  "haystack_integrations.*",
   "pytest.*",
   "numpy.*",
 ]
 ignore_missing_imports = true
-
-[tool.pytest.ini_options]
-addopts = "--strict-markers"
-markers = [
-  "unit: unit tests",
-  "integration: integration tests",
-  "embedders: embedders tests",
-  "generators: generators tests",
-]
-log_cli = true
