--- a/integrations/chroma/pyproject.toml
+++ b/integrations/chroma/pyproject.toml
@@ -25,6 +25,7 @@ classifiers = [
 dependencies = [
   "haystack-ai",
   "chromadb<0.4.20",  #  FIXME: investigate why filtering tests broke on 0.4.20
+  "typing_extensions>=4.8.0",
 ]
 
 [project.urls]
